Añado comentarios style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,7 +28,7 @@
           <a class="nav-link" href="#GueparWorld">Acerca de</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#antonio92guerrerogarcia@gmail.com">Contacto</a>
+          <a class="nav-link" href="#antonio92guerrerogarcia@gmail.com">Contacto</a> 
         </li>
       </ul>
     </div>
@@ -76,7 +76,7 @@
 </div>
 
 <footer class="bg-dark text-light text-center py-3">
-  <p>&copy; 2024 Antonio Guerrero García.</p>
+  <p>&copy; 2024 Antonio Guerrero García.  ////  antonio92guerrerogarcia@gmail.com .</p> 
 </footer>
 
 </body>
