añado mas imagenes

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="IMG/OIG3 (1).jpg" class="d-block w-75 mx-auto" alt="..." style="width: 600px; height: 600px;">
+        <img src="IMG/guepardocar.jpg" class="d-block w-75 mx-auto" alt="..." style="width: 600px; height: 600px;">
         <div class="carousel-caption d-none d-md-block">
           <h5>El guepardo es el animal terrestre más veloz del mundo en distancias cortas: corre a una velocidad máxima de entre 29 m/s (104  km/h)(Puede pasar de 0 a 97 km/h en 3 segundos o menos)​ aunque, si no alcanza su presa en menos de unos 400 metros, abandona la persecución.</h5>
           <p>​La mandíbula y el maxilar son cortos, lo cual reduce el peso de la cabeza sin comprometer la fuerza de mordida, aunque los dientes están reducidos en comparación a otros félidos.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="IMG/OIG1.jpg" class="d-block w-75 mx-auto" alt="..." style="width: 600px; height: 600px;">
+        <img src="IMG/guecazador.jpg" class="d-block w-75 mx-auto" alt="..." style="width: 600px; height: 600px;">
         <div class="carousel-caption d-none d-md-block">
           <h5>El guepardo es un cazador diurno, el cual se aprovecha tanto de su sigilo como de su piel moteada que le permite camuflarse con la vegetación cercana. Una vez llega el momento indicado, el felino correrá a hacía su presa para abatirla. Sin embargo, debido al gran desgaste de energía que dicha persecución tiene, estas duran menos de 1 minuto.</h5>
           <p>Acostumbrado a que los carroñeros de mayor envergadura o fuerza (como la hiena, el león, el leopardo o incluso el babuino) le roben las piezas que caza, el guepardo se ha habituado a cazar en las horas centrales del día, cuando los otros depredadores duermen.</p>
