--- a/index.html
+++ b/index.html
@@ -74,9 +74,32 @@
     </button>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>Acinonyx jubatus</h2>
+      <p>Las hembras dan a luz normalmente camadas de tres cachorros y viven con ellos durante un periodo que oscila entre el año y medio y los dos años. Los jóvenes cachorros pasan su primer año de vida aprendiendo de su madre y practicando técnicas de caza a la vez que juegan. Los machos viven solos o en pequeños grupos, a menudo formados por sus hermanos de camada.</p>
+      <img src="IMG/guecrias.jpg" alt="Imagen 1" class="img-fluid imagen-personalizada">
+    </div>
+    <div class="col">
+      <h2>GUEPARDO</h2>
+      <p>Cuando nace, la cría tiene una abundante melena clara sobre el dorso, en contraste con la mayoría de los felinos. Este es un mecanismo evolutivo que hace que se puedan camuflar con el entorno en una edad en la que el animal es extremadamente vulnerable, teniendo en cuenta que los principales rivales de caza del guepardo (leones y hienas principalmente) matarán a una cría de guepardo si se encuentran con ella,aprovechando su fragilidad, de cara a eliminar a un futuro rival.</p>
+      <img src="IMG/guesen.jpg" alt="Imagen 2" class="img-fluid imagen-personalizada">
+    </div>
+    <div class="col">
+      <h2>CHITA</h2>
+      <p>La mayor parte de los guepardos se encuentra en el este y el sudoeste de África. Se calcula que apenas quedan unos 12.000 guepardos en libertad, y éstos viven bajo la amenaza que supone el que sus hábitats naturales, las sabanas, estén desapareciendo a consecuencia de los asentamientos humanos.</p>
+      <img src="IMG/guecamu.jpg" alt="Imagen 3" class="img-fluid imagen-personalizada">
+    </div>
+  </div>
+</div>
+
+
 
 <footer class="bg-dark text-light text-center py-3">
-  <p>&copy; 2024 Antonio Guerrero García.  ////  antonio92guerrerogarcia@gmail.com .</p> 
+  <p>&copy; 2024 Antonio Guerrero García. 
+  <p>  antonio92guerrerogarcia@gmail.com
+  <p> 1º DAM ILERNA</p>
 </footer>
 
 </body>
