--- a/index.html
+++ b/index.html
@@ -22,19 +22,30 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="#"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#GueparWorld">Acerca de</a>
+          <a class="nav-link" href="#GueparWorld" data-bs-toggle="collapse" data-bs-target="#aboutDropdown" aria-expanded="false" aria-controls="aboutDropdown">Acerca de</a>
+           <div class="collapse custom-collapse" id="aboutDropdown">
+            <div class="card card-body">
+              <p>Mi nombre es Antonio Guerrero García. Soy un desarrollador multiplataforma apasionado por la tecnología y los felinos. ¡Bienvenido a mi web!</p>
+             </div>
+           </div>
+         </li>
+         <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             Contacto
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+             <li><a class="dropdown-item" href="#">Teléfono: 640319801</a></li>
+             <li><a class="dropdown-item" href="#">Email: antonio92guerrerogarcia@gmail.com</a></li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#antonio92guerrerogarcia@gmail.com">Contacto</a> 
-        </li>
-      </ul>
-    </div>
+       </ul>
+     </div>
   </div>
 </nav>
-
+  
 <div>
   <p id="meta"> MI ANIMAL FAVORITO </p>
   <p id="animal"> EL GUEPARDO </p>  
@@ -94,13 +105,40 @@
   </div>
 </div>
 
-
-
 <footer class="bg-dark text-light text-center py-3">
-  <p>&copy; 2024 Antonio Guerrero García. 
-  <p>  antonio92guerrerogarcia@gmail.com
-  <p> 1º DAM ILERNA</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h3>¡Déjanos tus datos!</h3>
+        <form>
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" class="form-control form-control-sm" id="nombre" placeholder="Escribe tu nombre">
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control form-control-sm" id="email" placeholder="Escribe tu email">
+          </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje:</label>
+            <textarea class="form-control form-control-sm" id="mensaje" rows="3" placeholder="Déjanos tu opinión"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary btn-sm">Enviar</button>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <h3>Contáctanos</h3>
+        <p>E-mail: antonio92guerrerogarcia@gmail.com</p>
+        <p>Teléfono: 640319801 (MENTIRA)</p>
+      </div>
+    </div>
+  </div>
+  <p>  1º DAM ILERNA 
+  <p>&copy; 2024 Antonio Guerrero García.
+  </p>
 </footer>
+
+
 
 </body>
 </html>
